# api.sebba.dev

./: .gitignore  Cargo.toml  Dockerfile  api_spec.http  readme.md
.config/: config.example.json
.github/workflows/: publish.yml
api/: Cargo.toml
api/src/: main.rs
api/src/route/: mod.rs
api/src/route/v1/: blog.rs
api/src/util/: authentication.rs  capture.rs  configuration.rs  response.rs
base/: Cargo.toml
base/src/: lib.rs
base/src/model/: blog.rs  http.rs
base/src/util/: file.rs
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
