[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# internal
api-sebba-dev-base = { path = "../base", features = ["sqlx"] }
logw = { version = "0.0.0", registry = "vichava", features = ["application"] }

# external
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4.34", features = ["serde"] }
actix-cors = "0.7.0"
sentry = "0.32.2"
prometheus-client = "0.22.1"
