[package]
name = "api-sebba-dev-base"
version = "0.0.0"
edition = "2021"
authors = ["Sebastijan KelneriÄ <s@sebba.dev>"]
publish = ["vichava"]

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"], optional = true }
chrono = { version = "0.4.34", features = ["serde"] }
